--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,4 +17,19 @@
 
 <!-- 🐶 Ajoute ensuite cette div à la div racine "root" `append` -->
 <!--   🤖 document.getElementById('root') -->
-<!--   📑 https://developer.mozilla.org/en-US/docs/Web/API/Element/append -->
+<!--   📑 https://developer.mozilla.org/en-US/docs/Web/API/Element/append --> 
+
+<html>
+    <head>
+    </head>
+    <body >
+        <div id="root"></div>  
+        <script>
+            var divElement=document.createElement('div')
+            div.textContent = 'Bienvenue sur mon site'
+            div.className = 'rootContainer'
+            document.getElementById('root').appendChild(divElement)
+
+        </script>      
+    </body>
+</html>
