--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -23,8 +23,21 @@
     <head>
     </head>
     <body>
+        <div id='root'></div>
+
+
+
+
+
+
+
+
+
+
+
+        
         <!-- <div id="root"></div>   -->
-        <script>
+        <!-- <script>
             var divEl = document.createElement('div')
             divEl.setAttribute('id','root')
             document.body.appendChild(divEl)
@@ -34,6 +47,6 @@
             divElement.className = 'rootContainer'
             document.getElementById('root').append(divElement)
 
-        </script>       
+        </script>        -->
     </body>
 </html>
