--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -23,19 +23,26 @@
     <head>
     </head>
     <body>
-        <div id='root'></div>
-
-
-
-
-
-
-
-
-
-
-
         
+        <div id="root"></div>
+        <script>
+            var newDiv = document.createElement("div")
+            newDiv.textContent= 'Bienvenue dghdsur mon site'
+            newDiv.className = 'rootContainer'
+            document.getElementById('root').appendChild(newDiv)
+        </script>
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- <div id="root"></div>   -->
         <!-- <script>
             var divEl = document.createElement('div')
