--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -27,21 +27,10 @@
         <div id="root"></div>
         <script>
             var newDiv = document.createElement("div")
-            newDiv.textContent= 'Bienvenue dghdsur mon site'
+            newDiv.textContent= 'Bienvenue sur mon site'
             newDiv.className = 'rootContainer'
             document.getElementById('root').appendChild(newDiv)
         </script>
-
-
-
-
-
-
-
-
-
-
-
 
         <!-- <div id="root"></div>   -->
         <!-- <script>
