--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -23,14 +23,30 @@
     <head>
     </head>
     <body>
-        
+        <!-- exercice -->
         <div id="root"></div>
         <script>
             var newDiv = document.createElement("div")
-            newDiv.textContent= 'Bienvenue sur mon site'
+            newDiv.textContent= 'Bienvenue sur mon site' // ou newDiv.innerHTML = '...'
             newDiv.className = 'rootContainer'
-            document.getElementById('root').appendChild(newDiv)
+            document.getElementById('root').appendChild(newDiv) // ou append(newDiv)
         </script>
+        <!-- Bonus  -->
+        <script>
+
+        </script>
+
+
+
+
+
+
+
+
+
+
+
+
 
         <!-- <div id="root"></div>   -->
         <!-- <script>
