--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -39,33 +39,10 @@
 
             var newDiv = document.createElement("div")
             newDiv.textContent= 'Bienvenue sur mon site' // ou newDiv.innerHTML = '...'
-            newDiv.className = 'rootContainer'
+            newDiv.setAttribute('class','container')  //newDiv.className = 'rootContainer'
             document.getElementById('root').appendChild(newDiv)
         </script>
 
 
-
-
-
-
-
-
-
-
-
-
-
-        <!-- <div id="root"></div>   -->
-        <!-- <script>
-            var divEl = document.createElement('div')
-            divEl.setAttribute('id','root')
-            document.body.appendChild(divEl)
-
-            var divElement=document.createElement('div')
-            divElement.textContent = 'Bienvenue sur mon site'
-            divElement.className = 'rootContainer'
-            document.getElementById('root').append(divElement)
-
-        </script>        -->
     </body>
 </html>
