--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -5,10 +5,10 @@
   <head>
     <!-- 🐶 Ajoute React et ReactDOM dans la page HTML -->
     <!-- 🤖 Ci dessous le code qui permet de charger React depuis un serveur unkg -->
-    <!--
+    
     <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
-      -->
+     
   </head>
   <body>
     <div id="root"></div>
@@ -18,11 +18,21 @@
       // Il va falloir maintenant réimplémenter ce code en React
       // ⛏️ Remplace les 3 lignes suivantes
       // 🤖 Utilise React.createElement
-      const divEl = document.createElement('div')
-      divEl.textContent = 'Bienvenue sur mon site'
-      divEl.className = 'rootContainer'
 
-      document.getElementById('root').append(divEl)
+      //JS natif
+      // const divEl = document.createElement('div')
+      // divEl.textContent = 'Bienvenue sur mon site'
+      // divEl.className = 'rootContainer'
+
+      //React
+      const divEl = React.createElement('div', {className : 'rootContainer' , children : 'Bienvenue sur mon site'})
+
+      //JS natif
+      //document.getElementById('root').append(divEl)
+      //rootEl.appendChild(divEl)
+
+      //React
+      ReactDOM.render(divEl,rootEl)
     </script>
   </body>
 </html>
