--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -6,26 +6,28 @@
     <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
     <!-- ⛏️ Ajoute Babel en supprimant les commentaires de la ligne ci-dessous -->
-    <!-- <script src="https://unpkg.com/@babel/standalone@7.15.1/babel.js"></script> -->
+    <script src="https://unpkg.com/@babel/standalone@7.15.1/babel.js"></script>
   </head>
   <body>
     <div id="root"></div>
     <!-- 🐶 Pour que Babel prenne en compte le code JavaScipt, il faut rajouter un attribut `type="text/babel"`
     A la balise <script> -->
-    <script>
+    <script type="text/babel">
       const rootEl = document.getElementById('root')
 
       // 🐶 Il va falloir maintenant réimplémenter avec JSX
-      const divEl = document.createElement('div')
-      divEl.textContent = 'Bienvenue sur mon site'
-      divEl.className = 'rootContainer'
+      // const divEl = document.createElement('div')
+      // divEl.textContent = 'Bienvenue sur mon site'
+      // divEl.className = 'rootContainer'
 
+      const divEl = <div className="rootContainer"> Bienvenue sur mon site </div>
       // 🐶 Crée une variable divEl qui contient du JSX (une div avec un texte et une class comme
       // le resultat final html attendu)
       // 🤖 Attention aux attributs en React qui diffèrent légèrement du HTML ex : class -> className
       // 📑 https://fr.reactjs.org/docs/dom-elements.html
 
-      document.getElementById('root').append(divEl)
+      //document.getElementById('root').append(divEl)
+      ReactDOM.render(divEl, rootEl)
     </script>
   </body>
 </html>
