--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -16,11 +16,11 @@
       const rootEl = document.getElementById('root')
 
       // 🐶 Il va falloir maintenant réimplémenter avec JSX
-      // const divEl = document.createElement('div')
+      const divEl = React.createElement('div',{className : "rootContainer"},'Bienvenue sur mon site')
       // divEl.textContent = 'Bienvenue sur mon site'
       // divEl.className = 'rootContainer'
 
-      const divEl = <div className="rootContainer"> Bienvenue sur mon site </div>
+      //const divEl = <div className="rootContainer"> Bienvenue sur mon site </div>
       // 🐶 Crée une variable divEl qui contient du JSX (une div avec un texte et une class comme
       // le resultat final html attendu)
       // 🤖 Attention aux attributs en React qui diffèrent légèrement du HTML ex : class -> className
