--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -15,12 +15,13 @@
     <script type="text/babel">
       const rootEl = document.getElementById('root')
 
-      const welcome = 'Bienvenue'
-      const site = 'sur mon site'
-      const children = `${welcome} ${site}`
-      const className = 'rootContainer'
+     
 
-      const divEl = <div className={className}> {children} </div>
+      const children = 'Bienvenue sur mon site'
+      const className = 'rootContainer'
+      const props = {children, className}
+
+      const divEl = <div {...props}></div>
      
       ReactDOM.render(divEl, rootEl)
     </script>
