Exc4 fonction paragraphe

--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -16,9 +16,11 @@
         }
       // 🐶 Utilise cette fonction à la place des balises <p>
       // 🤖 {paragraphe({children:'Lorem Ipsum ...'})}
+      const newH1 = <h1>Bienvenue sur mon site Test</h1>
       const divElement = (
         <div className="rootContainer">
           <h1>Bienvenue sur mon site</h1>
+          {newH1}
           {Paragraphe({children:'Lorem Ipsum is simply dummy text ...'})}
           {Paragraphe({children:'Lorem Ipsum has been the industry ...'})}
           {Paragraphe({children:'when an unknown printer took a galley ...'})}
