--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -26,7 +26,9 @@
           {Paragraphe({children:'Lorem Ipsum is simply dummy text ...'})}
           {Paragraphe({children:'Lorem Ipsum has been the industry ...'})}
           {Paragraphe({children:'when an unknown printer took a galley ...'})}
-          <Paragraphe>dhfsdlkghnsd</Paragraphe>
+          <Paragraphe>Lorem Ipsum is simply dummy text ...</Paragraphe>
+          <Paragraphe children={'Lorem Ipsum is simply dummy text ...'}/>
+          
         </div>
       )
 
